# PhysicsSimulator3D

./: .gitmodules  CMakeLists.txt  README.md
source/: define.h  main.cpp  rigidbody.cpp  rigidbody.h
